--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -32,6 +32,15 @@ vlc_SOURCES = winvlc.c
 vlc_DEPENDENCIES = vlc_win32_rc.$(OBJEXT)
 vlc_LDFLAGS = -mwindows
 vlc_LDADD += vlc_win32_rc.$(OBJEXT)
+libbreakpad_wrapper_la_SOURCES = breakpad.cpp
+libbreakpad_wrapper_la_LIBADD = $(BREAKPAD_LIBS)
+libbreakpad_wrapper_la_LDFLAGS = -static
+libbreakpad_wrapper_la_CXXFLAGS = $(AM_CXXFLAGS) $(BREAKPAD_CFLAGS) -DBREAKPAD_URL=\"@BREAKPAD_URL@\"
+if HAVE_BREAKPAD
+noinst_LTLIBRARIES = libbreakpad_wrapper.la
+vlc_LDADD += libbreakpad_wrapper.la -lstdc++ -lwininet
+vlc_CPPFLAGS = -DHAVE_BREAKPAD
+endif
 endif
 
 vlc_osx_SOURCES = darwinvlc.m
